--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!--Lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+        </dependency>
 
     </dependencies>
 
