Added swagger ui

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ security:
   token:
     secret: 9DKxk4ZuRV7SoyIR4s5Szh79a1zwIm8q
     expire: 24
+#
+#server:
+#  servlet-path: /api
 
 #liquibase:
 #change-log: classpath:/changelog/db.changelog-master.yaml
