--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,16 +9,13 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
-    username: serhii
-    password: F,hfrflf,hf314
+    username: root
+    password: root
 
 security:
   token:
     secret: 9DKxk4ZuRV7SoyIR4s5Szh79a1zwIm8q
     expire: 24
-#
-#server:
-#  servlet-path: /api
 
 #liquibase:
 #change-log: classpath:/changelog/db.changelog-master.yaml
