Added all dto's and change existing

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,12 +4,12 @@ spring:
     database: mysql
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
-    username: root
-    password: root
+    username: serhii
+    password: F,hfrflf,hf314
 
 security:
   token:
