--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,14 +8,14 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
-    username: u5
-    password:
+    username: serhii
+    password: F,hfrflf,hf314
 
 security:
   token:
     secret: 9DKxk4ZuopLtywwSoyIR45mdLOiPa1zw
     expire: 24
 
-#liquibase:
-#change-log: classpath:/changelog/db.changelog-master.yaml
+liquibase:
+  change-log: classpath:/changelog/db.changelog-master.yaml
 
