--- a/src/main/resources/changelog/changeset/create_table_user_address.yaml
+++ b/src/main/resources/changelog/changeset/create_table_user_address.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
-      id: 3
-      author: Team1
+      id: 5
+      author: OsbbTeam
       changes:
         - createTable:
             tableName: user_address
