--- a/src/main/resources/changelog/changeset/create_table_user_role.yaml
+++ b/src/main/resources/changelog/changeset/create_table_user_role.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
-      id: 2
-      author: Team1
+      id: 4
+      author: OsbbTeam
       changes:
         - createTable:
             tableName: user_role
