--- a/src/main/resources/changelog/changeset/create_table_vote.yaml
+++ b/src/main/resources/changelog/changeset/create_table_vote.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
-      id: 4
-      author: Team1
+      id: 9
+      author: OsbbTeam
       changes:
       - createTable:
           tableName: vote
