--- a/src/main/resources/changelog/db.changelog-master.yaml
+++ b/src/main/resources/changelog/db.changelog-master.yaml
@@ -2,6 +2,8 @@ databaseChangeLog:
   - include:
       file: changelog/changeset/create_table_user.yaml
   - include:
+      file: changelog/changeset/create_table_osbb.yaml
+  - include:
       file: changelog/changeset/create_table_role.yaml
   - include:
       file: changelog/changeset/create_table_address.yaml
@@ -9,6 +11,8 @@ databaseChangeLog:
       file: changelog/changeset/create_table_user_role.yaml
   - include:
       file: changelog/changeset/create_table_user_address.yaml
+  - include:
+      file: changelog/changeset/create_table_osbb_address.yaml
   - include:
       file: changelog/changeset/create_table_proposition.yaml
   - include:
