Added Osbb entity. Fix liqubase. Added relationship osbb-user

--- a/src/main/resources/changelog/changeset/create_table_user.yaml
+++ b/src/main/resources/changelog/changeset/create_table_user.yaml
@@ -34,3 +34,13 @@ databaseChangeLog:
                 type: varchar(255)
                 constraints:
                   nullable: false
+            - column:
+                name: osbb_id
+                type: bigint
+                constraints:
+                  nullable: false
+                  foreignKeyName: fk_osbb_user
+                  references: osbb(id)
+            - column:
+                name: is_osbb_manager
+                type: bit(1)
