--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,16 +8,14 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
-    username: serhii
-    password: F,hfrflf,hf314
-
-  liquibase:
-    change-log: classpath:/changelog/db.changelog-master.yaml
+    username: root
+    password: root
 
 security:
   token:
     secret: 9DKxk4ZuopLtywwSoyIR45mdLOiPa1zw
     expire: 24
 
-
+liquibase:
+  change-log: classpath:/changelog/db.changelog-master.yaml
 
