--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,8 +8,8 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
-    username: serhii
-    password: F,hfrflf,hf314
+    username: u5
+    password:
 
   liquibase:
     change-log: classpath:/changelog/db.changelog-master.yaml
