Feauture add weather api (#18)
* Added Osbb service, repo and controller

* Added weaher service and dto. Configure project

* Completed weather api

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <groupId>lits.com</groupId>
     <artifactId>spring-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>spring-boot</name>
     <description>Demo project LITS (SpringBoot teaching)</description>
-    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -115,6 +115,10 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
