--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     database: mysql
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
 
   datasource:
     url: jdbc:mysql://localhost:3306/osbb?serverTimezone=UTC
@@ -13,6 +13,10 @@ spring:
 
   liquibase:
     change-log: classpath:/changelog/db.changelog-master.yaml
+
+server:
+  servlet:
+    contextPath: /api
 
 security:
   token:
